replace with eureka repo instead of product

--- a/Java_Spring_APIs/0001_Product_Module/image/Jenkinsfile
+++ b/Java_Spring_APIs/0001_Product_Module/image/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
             steps {
                 echo "[PREPARATION] START"
                 script {
-					productModuleGitUrl = 'https://github.com/masudbappy/2023.1-product_module.git'
+					productModuleGitUrl = 'https://github.com/masudbappy/eureka-server.git'
                   	productModuleBaseDir = 'api_base_dir'
                     automationGitUrl = 'https://github.com/masudbappy/2023-automation.git'
                     automationBranch = env.AUTOMATION_GIT_BRANCH
