added jenkins code to build eureka project.

--- a/01_Java_Spring_APIs/0001_Eureka_Server/stg/image/Jenkinsfile
+++ b/01_Java_Spring_APIs/0001_Eureka_Server/stg/image/Jenkinsfile
@@ -55,9 +55,19 @@ pipeline {
             }
         }
         stage('Build') {
+            when {
+                expression {
+                    return params.BUILD
+                }
+            }
+            tools {
+                jdk 'JDK11'
+            }
             steps {
                 echo "[BUILD] START"
-
+                script {
+                    sh "cd ${eurekaServerBaseDir} && chmod +x gradlew && ./gradlew clean build"
+                }
                 echo "[BUILD] END"
             }
         }
