Add gradle version

--- a/01_Java_Spring_APIs/0001_Eureka_Server/stg/image/Jenkinsfile
+++ b/01_Java_Spring_APIs/0001_Eureka_Server/stg/image/Jenkinsfile
@@ -61,7 +61,7 @@ pipeline {
                 }
             }
             tools {
-                jdk 'JDK11'
+                gradle 'Gradle 8.0.2'
             }
             steps {
                 echo "[BUILD] START"
