--- a/01_Java_Spring_APIs/0001_Eureka_Server/stg/image/Jenkinsfile
+++ b/01_Java_Spring_APIs/0001_Eureka_Server/stg/image/Jenkinsfile
@@ -63,7 +63,9 @@ pipeline {
             steps {
                 echo "[BUILD] START"
                 script {
-                    sh "cd ${eurekaServerBaseDir} && chmod +x gradlew && ./gradlew clean build"
+			dir(api_base_dir) {
+    				sh "cd ${eurekaServerBaseDir} && chmod +x gradlew && ./gradlew clean build"
+			}
                 }
                 echo "[BUILD] END"
             }
